--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lab8",
   "version": "0.1.0",
-  "homepage": "https:///monikazazyaga.github.io/Lab8.git",
+  "homepage": "https:///monikazazyaga.github.io/Lab8",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
